some failed experiments
that might work out in the long run

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<button id="clear-course-data">Clear course</button>
 				<span id="show-hide-key" class="shrink-children">Show/hide key</span>
 				<a href = "help.html" target="help" class = "help-button" title="Getting started"> ❔ </a>
-				<a href="studyhoursestimator.html" target="_blank" style="position:absolute;right:16px">Help estimating study hours</a>
+				<a href="studyhoursestimator.html" target="_blank" style="position:absolute;right:16px" title="Help estimating study hours">🧮</a>
 			
 				<div id="colour-key-container"></div>
 
